--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -26,7 +26,7 @@
         <td class="subdpot"><%= select_tag :subdpto_id, {}, :disabled => true, :id=>"computer_subdpto_id"%></td>
         <td class="sort"><%= f.text_field :sort %></td>
         <td class="name"><%= f.text_field :name %></td>
-        <td class="actions"><%= f.submit %></td>
+        <td class="actions"><%= f.submit "Salvar IP"%></td>
       </tr>
     </tbody>
   </table>
