--- a/app/views/equipment/_edit.html.erb
+++ b/app/views/equipment/_edit.html.erb
@@ -30,6 +30,16 @@
 			})
 			return false;
 		});
+		// Save on enter pressed
+		$('#edit_equipment_<%= @equipment.id %> input').keypress(function(e){
+			if (e.which == 13) {
+				$('#edit_equipment_<%= @equipment.id %>').submit();
+			}
+		});
+		// Save on save button clicked
+		$('.submit_form').click(function(){
+		    $('#edit_equipment_<%= @equipment.id %>').submit();
+		});
 		$(".cancel_btn").click(function(){
 			$('#edit_equipment_<%= @equipment.id %>').replaceWith('<tr class="fields" id="equipment_item_<%= @equipment.id %>"><td class="ip"><%= @equipment.ip %></td><% @dptos.each do |d| %><td><%=j d.abbr if @equipment.dpto_id == d.id %></td>  <% end %><% @subdptos.each do |s| %><td><%=j s.abbr if @equipment.subdpto_id == s.id %></td>  <% end %><td><%= @equipment.sort %></td><td class="actions"><%=j link_to "Edit", edit_equipment_path(@equipment), :remote => true %><%=j link_to "Destroy", @equipment, method: :delete, data: { confirm: "Tem certeza?" }, :remote => true %></td></tr>');
 		});
