--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,43 +55,62 @@ footer {
 
 .computers_list, .equipments_list {
   float: left;
-  width: 50%; }
+  padding: 0; }
   .computers_list thead, .equipments_list thead {
-    width: 60%;
+    width: 100%;
     float: left; }
     .computers_list thead th, .equipments_list thead th {
-      width: 160px;
-      text-align: center; }
+      width: 150px;
+      text-align: center;
+      float: left;
+      background: #0b61a4;
+      color: #fff;
+      padding: 7px 0;
+      margin: 0 0 -10px 0; }
+    .computers_list thead th:first-child, .equipments_list thead th:first-child {
+      border-radius: 3px 0 0 0; }
+    .computers_list thead th:last-child, .equipments_list thead th:last-child {
+      border-radius: 0 3px 0 0; }
     .computers_list thead .ip, .equipments_list thead .ip {
-      width: 52px !important; }
+      width: 42px !important; }
   .computers_list .fields, .equipments_list .fields {
     float: left;
     width: 90%;
     cursor: pointer; }
     .computers_list .fields td, .equipments_list .fields td {
       padding: 5px;
-      width: 165px;
+      width: 150px;
       float: left;
       background: #fff;
-      margin: 0 2px 0 0;
-      border: 1px solid #fff;
       text-align: center;
       height: 20px; }
     .computers_list .fields .ip, .equipments_list .fields .ip {
       width: 40px; }
-    .computers_list .fields .actions, .equipments_list .fields .actions {
-      display: none;
-      background: #f1f1f1; }
-  .computers_list .fields:hover .actions, .equipments_list .fields:hover .actions {
-    display: inline; }
-  .computers_list .fields:nth-child(2n+1) .actions, .equipments_list .fields:nth-child(2n+1) .actions {
-    background: #f1f1f1; }
+  .computers_list .fields td, .equipments_list .fields td {
+    border-right: 1px solid #ccc; }
+  .computers_list .fields td:nth-last-child(2), .equipments_list .fields td:nth-last-child(2) {
+    border: none; }
+  .computers_list .fields:hover .actions, .computers_list .fields:nth-child(2n+1):hover .actions, .equipments_list .fields:hover .actions, .equipments_list .fields:nth-child(2n+1):hover .actions {
+    display: inherit; }
+  .computers_list .fields .actions, .computers_list .fields:nth-child(2n+1) .actions, .equipments_list .fields .actions, .equipments_list .fields:nth-child(2n+1) .actions {
+    float: right;
+    position: inherit;
+    margin: -30px -50px 0 0;
+    padding: 3px 0;
+    width: 60px;
+    border-radius: 5px;
+    border: 1px solid #ff9200 !important;
+    box-shadow: 1px 1px 3px #999;
+    display: none;
+    background: #ffc373; }
+    .computers_list .fields .actions a, .computers_list .fields:nth-child(2n+1) .actions a, .equipments_list .fields .actions a, .equipments_list .fields:nth-child(2n+1) .actions a {
+      float: left;
+      margin: 2px 0 0 9px; }
   .computers_list .fields:nth-child(2n+1) td, .equipments_list .fields:nth-child(2n+1) td {
     padding: 5px;
-    width: 151px;
+    width: 150px;
     float: left;
-    background: #e0f1ff;
-    border: 1px solid #d8e7ed; }
+    background: #e0f1ff; }
   .computers_list .fields:nth-child(2n+1) td:first-child, .equipments_list .fields:nth-child(2n+1) td:first-child {
     border-left-width: 0; }
   .computers_list .fields:nth-child(2n+1) td:nth-last-child(2), .equipments_list .fields:nth-child(2n+1) td:nth-last-child(2) {
@@ -102,11 +121,18 @@ footer {
     width: 40px;
     text-align: center; }
 
-.edit_computer, #new_computer, .edit_equipment, #new_equipment {
-  width: 100%; }
+.edit_computer .actions, .edit_equipment .actions {
+  display: inherit !important; }
 
-.computers_list, .equipments_list {
-  width: 80%; }
+.edit_computer, #new_computer, .edit_equipment, #new_equipment {
+  width: 100%;
+  padding: 0; }
+
+.equipments_list {
+  width: 600px; }
+
+.computers_list {
+  width: 780px; }
 
 .computers_list, .edit_computer, #new_computer, .equipments_list, .edit_equipment, #new_equipment {
   float: left; }
@@ -115,15 +141,15 @@ footer {
     float: left; }
     .computers_list thead th, .edit_computer thead th, #new_computer thead th, .equipments_list thead th, .edit_equipment thead th, #new_equipment thead th {
       float: left;
-      width: 164px;
-      text-align: center; }
+      width: 162px;
+      text-align: center;
+      margin: 0 0 -6px -1px; }
     .computers_list thead .ip, .edit_computer thead .ip, #new_computer thead .ip, .equipments_list thead .ip, .edit_equipment thead .ip, #new_equipment thead .ip {
-      width: 52px !important; }
+      width: 48px !important; }
   .computers_list .fields div, .computers_list .fields td, .edit_computer .fields div, .edit_computer .fields td, #new_computer .fields div, #new_computer .fields td, .equipments_list .fields div, .equipments_list .fields td, .edit_equipment .fields div, .edit_equipment .fields td, #new_equipment .fields div, #new_equipment .fields td {
     float: left;
-    width: 151px;
-    padding: 5px;
-    margin-right: 4px; }
+    width: 150px;
+    padding: 5px; }
     .computers_list .fields div input, .computers_list .fields div select, .computers_list .fields td input, .computers_list .fields td select, .edit_computer .fields div input, .edit_computer .fields div select, .edit_computer .fields td input, .edit_computer .fields td select, #new_computer .fields div input, #new_computer .fields div select, #new_computer .fields td input, #new_computer .fields td select, .equipments_list .fields div input, .equipments_list .fields div select, .equipments_list .fields td input, .equipments_list .fields td select, .edit_equipment .fields div input, .edit_equipment .fields div select, .edit_equipment .fields td input, .edit_equipment .fields td select, #new_equipment .fields div input, #new_equipment .fields div select, #new_equipment .fields td input, #new_equipment .fields td select {
       width: 100%;
       text-align: center; }
